[tool.poetry]
name = "leetcode-python"
version = "0.1.0"
description = "CNife's LeetCode solutions with Python"
authors = ["CNife <CNife@vip.qq.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.9"
rich = "^10.1.0"

[tool.poetry.dev-dependencies]
black = "^21.4b1"
pydbg = "^0.3.0"
pylint = "^2.8.2"
loguru = "^0.5.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
